--- a/inference_pipeline.ipynb
+++ b/inference_pipeline.ipynb
@@ -87,7 +87,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "import pandas as pd \n",
+    "csv_file = path_\n",
+    "\n",
+    "df = pd.read_csv(csv_file)\n",
+    "\n",
+    "sen1 = df['sen1'].values.tolist()\n",
+    "vector_1 = df['vector1'].values.tolist()\n",
+    "sen2 = df['sen2'].values.tolist()\n",
+    "vector_2 = df['vector2'].values.tolist()\n",
+    "label = df['label'].values.tolist()\n",
+    "\n",
+    "for num, vectors in enumerate(vector_1):\n",
+    "    vector_1[num] = vectors.replace('[[','[').replace(']]',']')\n",
+    "\n",
+    "for num, vectors in enumerate(vector_2):\n",
+    "    vector_2[num] = vector_2.replace('[[','[').replace(']]',']')\n",
+    "\n",
+    "pd.DataFrame({\"sen1\":sentence_1,\"vector1\":vector_1,\"sen2\":sentence_2,\"vector2\":vector_2,\"label\":label}).to_csv(csv_file,encoding='utf-8-sig')"
+   ]
   },
   {
    "cell_type": "markdown",
