--- a/inference_pipeline.ipynb
+++ b/inference_pipeline.ipynb
@@ -67,8 +67,8 @@
     "        vectors.append(vector)\n",
     "    return vectors\n",
     "\n",
-    "path_=\"\"\n",
-    "sentence_1, sentence_2 = sentences2list(path=\"\", \"sen1\", \"sen2\")\n",
+    "path_=r\"C:\\Users\\YuCheng_Ch\\Desktop\\accton\\甲方vs全部.csv\"\n",
+    "sentence_1, sentence_2 = sentences2list(path=path_, key_1=\"sen1\", key_2=\"sen2\")\n",
     "vector_1 = turning(sentence_1)\n",
     "vector_2 = turning(sentence_2)\n",
     "\n",
@@ -98,15 +98,62 @@
     "vector_1 = df['vector1'].values.tolist()\n",
     "sen2 = df['sen2'].values.tolist()\n",
     "vector_2 = df['vector2'].values.tolist()\n",
-    "label = df['label'].values.tolist()\n",
+    "\n",
     "\n",
     "for num, vectors in enumerate(vector_1):\n",
     "    vector_1[num] = vectors.replace('[[','[').replace(']]',']')\n",
     "\n",
     "for num, vectors in enumerate(vector_2):\n",
-    "    vector_2[num] = vector_2.replace('[[','[').replace(']]',']')\n",
+    "    vector_2[num] = vectors.replace('[[','[').replace(']]',']')\n",
     "\n",
-    "pd.DataFrame({\"sen1\":sentence_1,\"vector1\":vector_1,\"sen2\":sentence_2,\"vector2\":vector_2,\"label\":label}).to_csv(csv_file,encoding='utf-8-sig')"
+    "pd.DataFrame({\"sen1\":sentence_1,\"vector1\":vector_1,\"sen2\":sentence_2,\"vector2\":vector_2}).to_csv(csv_file,encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 兩向量相加除2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import ast\n",
+    "\n",
+    "# 讀取 CSV 檔案\n",
+    "\n",
+    "csv_file = path_\n",
+    "df = pd.read_csv(csv_file, encoding='utf-8-sig')\n",
+    "\n",
+    "# 定義一個函數來解析向量，並進行向量相加和除以字數總和\n",
+    "def process_row(row):\n",
+    "    # 解析 list 字符串為真正的 lis\n",
+    "    sen_vector = ast.literal_eval(row['vector1'])\n",
+    "    pre_vector = ast.literal_eval(row['vector2'])\n",
+    "\n",
+    "    # 向量相加\n",
+    "    merged_vector = [s + p for s, p in zip(sen_vector, pre_vector)]\n",
+    "\n",
+    "    # 計算字數總和\n",
+    "    total_characters = len(row['sen1']) + len(row['sen2'])\n",
+    "\n",
+    "    # 將相加的向量除以字數總和\n",
+    "    final_vector = [v / total_characters for v in merged_vector]\n",
+    "\n",
+    "    return final_vector\n",
+    "\n",
+    "# 應用函數處理每一行\n",
+    "df['final_vector'] = df.apply(process_row, axis=1)\n",
+    "\n",
+    "# 保存結果到新的 CSV 檔案\n",
+    "df.to_csv(csv_file, index=False, encoding='utf-8-sig')\n",
+    "\n",
+    "print(\"向量處理完成，已保存到{}'。\".format(csv_file))"
    ]
   },
   {
@@ -131,9 +178,9 @@
     "import numpy as np \n",
     "\n",
     "# 定義輸出 CSV 檔案路徑\n",
-    "input_csv_path = r\"C:\\Users\\YuCheng_Ch\\Desktop\\1731rand_ans_que_merge_tensor.csv\" # 替換成你的路徑\n",
-    "model_path = r\"C:\\Users\\YuCheng_Ch\\Desktop\\datasets_accton\\onetime_train\\model_epoch_25_acc_83.49_loss_0.4775.pth\"\n",
-    "csv_output_path = r'C:\\Users\\YuCheng_Ch\\Desktop\\datasets_accton\\預測結果\\1731rand_ans_que_merge_tensor-predict.csv'\n",
+    "input_csv_path = path_ # 替換成你的路徑\n",
+    "model_path = r'C:\\Users\\YuCheng_Ch\\Desktop\\datasets\\onetime_train\\model_epoch_175_acc_70.93_loss_0.7378.pth'\n",
+    "csv_output_path = r'C:\\Users\\YuCheng_Ch\\Desktop\\accton\\預測結果\\甲方vs全部.csv'\n",
     "batch_size = 128\n",
     "\n",
     "\n",
@@ -152,6 +199,10 @@
     "        self.linear5 = nn.Linear(64, 16)\n",
     "        self.linear6 = nn.Linear(16, 8)\n",
     "        self.output = nn.Linear(8, 2)   \n",
+    "        for param in self.linear6.parameters():             \n",
+    "            param.requires_grad = False\n",
+    "        for param in self.output.parameters(): \n",
+    "            param.requires_grad = False\n",
     "\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -218,8 +269,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
