--- a/train_pipeline .ipynb
+++ b/train_pipeline .ipynb
@@ -34,8 +34,9 @@
     "    df = pd.read_csv(path)\n",
     "    sentences_1 = df[key_1].values.tolist()\n",
     "    sentences_2 = df[key_2].values.tolist()\n",
+    "    label = df['label'].values.tolist()\n",
     "\n",
-    "    return sentences_1,sentences_2\n",
+    "    return sentences_1,sentences_2, label\n",
     "\n",
     "\n",
     "\n",
@@ -67,12 +68,12 @@
     "        vectors.append(vector)\n",
     "    return vectors\n",
     "\n",
-    "path_=\"\"\n",
-    "sentence_1, sentence_2 = sentences2list(path=\"\", \"sen1\", \"sen2\")\n",
+    "path_=r\"C:\\Users\\YuCheng_Ch\\Desktop\\accton\\hr_datasets_5798.csv\"\n",
+    "sentence_1, sentence_2, label = sentences2list(path=path_, key_1=\"sen1\", key_2=\"sen2\")\n",
     "vector_1 = turning(sentence_1)\n",
     "vector_2 = turning(sentence_2)\n",
     "\n",
-    "pd.DataFrame({\"sen1\":sentence_1,\"vector1\":vector_1,\"sen2\":sentence_2,\"vector2\":vector_2}).to_csv(path_,encoding=\"utf-8-sig\")\n"
+    "pd.DataFrame({\"sen1\":sentence_1,\"vector1\":vector_1,\"sen2\":sentence_2,\"vector2\":vector_2,\"label\":label}).to_csv(path_,encoding=\"utf-8-sig\")\n"
    ]
   },
   {
@@ -106,7 +107,7 @@
     "    vector_1[num] = vectors.replace('[[','[').replace(']]',']')\n",
     "\n",
     "for num, vectors in enumerate(vector_2):\n",
-    "    vector_2[num] = vector_2.replace('[[','[').replace(']]',']')\n",
+    "    vector_2[num] = vectors.replace('[[','[').replace(']]',']')\n",
     "\n",
     "pd.DataFrame({\"sen1\":sentence_1,\"vector1\":vector_1,\"sen2\":sentence_2,\"vector2\":vector_2,\"label\":label}).to_csv(csv_file,encoding='utf-8-sig')"
    ]
@@ -138,13 +139,12 @@
     "from tqdm import tqdm\n",
     "from torch import optim\n",
     "import ast\n",
-    "\n",
+    "import os \n",
     "# 定義輸出 CSV 檔案路徑\n",
-    "input_csv_path = r\"C:\\Users\\YuCheng_Ch\\Desktop\\1731rand_ans_que_merge_tensor.csv\" # 替換成你的路徑\n",
-    "model_path = r\"C:\\Users\\YuCheng_Ch\\Desktop\\datasets_accton\\onetime_train\\model_epoch_25_acc_83.49_loss_0.4775.pth\"\n",
-    "model_save_directory = r'C:\\Users\\YuCheng_Ch\\Desktop\\datasets_accton\\onetime_train'\n",
+    "input_csv_path = path_ # 替換成你的路徑\n",
+    "model_save_directory = r'C:\\Users\\YuCheng_Ch\\Desktop\\datasets\\onetime_train'\n",
     "batch_size = 128\n",
-    "\n",
+    "epochs = 500\n",
     "\n",
     "\n",
     "# 定義模型架構\n",
@@ -204,8 +204,9 @@
     "\n",
     "train_x = torch.tensor(train_x, dtype=torch.float32).cuda()\n",
     "test_x = torch.tensor(test_x, dtype=torch.float32).cuda()\n",
-    "train_y = torch.tensor(train_y, dtype=torch.float64).cuda()\n",
-    "test_y = torch.tensor(test_y, dtype=torch.float64).cuda()\n",
+    "train_y = torch.tensor(train_y, dtype=torch.long).cuda() \n",
+    "test_y = torch.tensor(test_y, dtype=torch.long).cuda()\n",
+    " \n",
     "\n",
     "#xy打包\n",
     "train = torch.utils.data.TensorDataset(train_x, train_y)\n",
@@ -229,8 +230,7 @@
     "optimizer = torch.optim.Adam(model.parameters(), lr=LR)\n",
     "\n",
     "\n",
-    "import os \n",
-    "epochs = 100\n",
+    "\n",
     "save_interval = 25\n",
     "log_interval = 25\n",
     "\n",
@@ -295,8 +295,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
