--- a/batchsize-bert-inference_pipeline_合併句子再轉向量才除合併句子後的token數.ipynb
+++ b/batchsize-bert-inference_pipeline_合併句子再轉向量才除合併句子後的token數.ipynb
@@ -9,9 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\YuCheng_Ch\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\huggingface_hub\\file_download.py:1150: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "sentence to vector ...:   0%|          | 0/2048 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import BertModel, BertTokenizer\n",
@@ -31,16 +44,15 @@
     "model.eval()\n",
     "\n",
     "def sentences2list(path,key_1, key_2):\n",
-    "    df = pd.read_csv(path)[:30000]\n",
-    "    sentence_merged = df[key_1]+df[key_2].tolist()    \n",
+    "    df = pd.read_csv(path)\n",
+    "    sentence_merged = (df[key_1] + df[key_2]).tolist()    \n",
     "    return sentence_merged\n",
     "\n",
     "\n",
     "\n",
-    "def get_sentence_vector(sentence):\n",
+    "def get_sentence_vector(batch_sentences):\n",
     "    # Tokenize 句子並轉換為張量\n",
-    "    # turning 會引用到\n",
-    "    inputs = tokenizer(sentence, return_tensors=\"pt\", padding=True, truncation=True).to(device)\n",
+    "    inputs = tokenizer(batch_sentences, return_tensors=\"pt\", padding=True, truncation=True).to(device)\n",
     "\n",
     "    # 用於不進行梯度計算的上下文管理器\n",
     "    with torch.no_grad():\n",
@@ -50,27 +62,28 @@
     "    # 最後一層的所有 token 的向量\n",
     "    last_hidden_state = outputs.last_hidden_state\n",
     "\n",
-    "    \n",
-    "    \n",
     "    # 將所有 token 的向量相加，並除以 token 的數量，得到句子的向量\n",
-    "    sentence_vector = (last_hidden_state.sum(dim=1)/torch.max(last_hidden_state))\n",
-    "    sentence_vector = (sentence_vector/last_hidden_state.shape[1]).cpu().numpy().tolist()\n",
+    "    sentence_vectors = (last_hidden_state.sum(dim=1)/torch.max(last_hidden_state))\n",
+    "    sentence_vectors = (sentence_vectors/last_hidden_state.shape[1]).cpu().numpy().tolist()\n",
     "\n",
-    "    return sentence_vector\n",
+    "    return sentence_vectors\n",
     "\n",
-    "\n",
-    "\n",
-    "def turning(sentences_list):\n",
+    "def turning(sentences_list, batch_size=512):\n",
     "    vectors = []\n",
     "    total = len(sentences_list)\n",
-    "    for num, sen in tqdm(enumerate(sentences_list),total = total, desc=\"sentence to vector ...\"):\n",
-    "        vector = str(get_sentence_vector(sen))\n",
-    "        vectors.append(vector)\n",
+    "    \n",
+    "    # 分批處理\n",
+    "    for i in tqdm(range(0, total, batch_size), total=total // batch_size + 1, desc=\"sentence to vector ...\"):\n",
+    "        batch_sentences = sentences_list[i:i+batch_size]\n",
+    "        batch_vectors = get_sentence_vector(batch_sentences)\n",
+    "        vectors.extend([str(vector) for vector in batch_vectors])\n",
+    "    \n",
     "    return vectors\n",
+    "\n",
     "\n",
     "path_= r\"C:\\Users\\YuCheng_Ch\\Desktop\\thesis\\因此，檢察官對於起訴之犯罪事實，應負提出證據及說服之實質舉證責任。.csv\"\n",
     "sentence_merged = sentences2list(path_, \"sen1\", \"sen2\")\n",
-    "vector = turning(sentence_merged)\n",
+    "vector = turning(sentence_merged,batch_size=256)\n",
     "\n",
     "\n",
     "pd.DataFrame({\"sentence_merged\":sentence_merged,\"vector\":vector}).to_csv(path_,encoding=\"utf-8-sig\")\n"
