--- a/train_pipeline_合併句子再轉向量才除合併句子後的token數.ipynb
+++ b/train_pipeline_合併句子再轉向量才除合併句子後的token數.ipynb
@@ -9,9 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\YuCheng_Ch\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\huggingface_hub\\file_download.py:1150: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "sentence to vector ...:  54%|█████▍    | 4045/7442 [00:30<00:25, 132.13it/s]"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import BertModel, BertTokenizer\n",
@@ -293,7 +306,7 @@
     "##### 加權損失函數\n",
     "class_counts = np.bincount(train_y.cpu().numpy().astype(np.int64))\n",
     "class_weights = 1. / class_counts\n",
-    "weights = torch.tensor(np.array([0.00029824,0.00089472]), dtype=torch.float32).cuda()\n",
+    "weights = torch.tensor(np.array([0.00029824,0.0014912]), dtype=torch.float32).cuda()\n",
     "# print(class_weights)\n",
     "print(\"weight:\",weights)\n",
     "loss_fun = nn.CrossEntropyLoss(weight=weights)\n",
